bootstraped/templates/main.css
body {
  background-image: url("{{ SITEURL }}/theme/images/py-1.png");
}

#content {
  padding-top: 60px;
  padding-bottom: 40px;
  font-size: 16px;
  font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
}

/* Adjust anchors to compensate for top navbar */

.label {
  margin-right: 10px;
}

td.label {
  margin-right: 0px;
}

td.fn-backrefs {
  padding-right: 5px;
}

.fn-backref-list {
  vertical-align: super;
  font-size: smaller;
}

footer {
  background: inherit;
  background-image: none;
  min-height: 0px!important;
}

.sidebar {
  padding-left: 20px;
  border-left: 1px solid #222;
}

/* Links in headers should be white */
h1 a,
h2 a,
h3 a,
h4 a {
  color: inherit;
}

/* CSS managing figures */
.figure-wrapper {
  text-align: center;
}

.figure {
  display: inline-block;
  border: 1px solid #bbb;
  border-radius: 3px;
  padding: 4px;
  margin: 0 1em 1em 0;
  box-shadow: 4px 4px 4px 0px rgba(128, 128, 128, 0.5);
  max-width: 100%;
}

.figure img {
  max-width: 100%;
}

.pre {
  white-space: pre;
}

.highlight pre {
  white-space: pre-wrap; /* css-3 */
  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
  white-space: -pre-wrap; /* Opera 4-6 */
  white-space: -o-pre-wrap; /* Opera 7 */
  word-break: break-all;
}

code {
  /* Override bootswatch 'code' stylings */
  padding: 0;
  font-size: 90%;
  color: inherit;
  white-space: nowrap;
  background-color: transparent;
  border-radius: 0;
}

.highlight,code,pre,kbd,samp{
  font-family: "Source Code Pro","Consolas","Menlo","Monaco","Courier New",monospace;
}

/* Allow long references to wrap (for mobile) */
#references a.reference {
  white-space: pre-wrap; /* css-3 */    
  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
  white-space: -pre-wrap; /* Opera 4-6 */    
  white-space: -o-pre-wrap; /* Opera 7 */    
  word-wrap: break-word; /* Internet Explorer 5.5+ */
  word-break: break-all;
}

.topic-title {
  color: #FFF;
  font-size: 110%;
  padding-top: 10px;
}

.topic table {
  color: inherit;
}

.field-list {
  background: inherit;
  margin-left: 20px;
}

.field-name {
  padding-right: 10px;
}

dd {
  margin-left: 20px;
}


ul.tagcloud {
  list-style: none;
  padding-left: 20px;
}

ul.tagcloud li {
  display: inline-block;
}

li.tag-1 {
  font-size: 150%;
}

li.tag-2 {
  font-size: 120%;
}

li.tag-3 {
  font-size: 100%;
}

li.tag-4 {
  font-size: 90%;
}

